--- a/.github/workflows/buildroot-external-mq.yml
+++ b/.github/workflows/buildroot-external-mq.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: 100askTeam/buildroot_aw-ol
-          ref: main
+          ref: master
           path: buildroot
       - name: Install buildroot dependencies
         run: sudo apt install debianutils sed make binutils build-essential gcc g++ bash patch gzip bzip2 perl tar cpio unzip rsync file bc git mtools
@@ -26,8 +26,6 @@ jobs:
         run: make -C buildroot BR2_EXTERNAL=../buildroot-external-mq O=../output ${{ matrix.config }}
       - name: Build Buildroot
         run: make -C buildroot BR2_EXTERNAL=../buildroot-external-mq O=../output
-      - name: Run legal-info
-        run: make -C buildroot BR2_EXTERNAL=../buildroot-external-mq O=../output legal-info
       - name: Compress sdcard.img
         run: gzip -9 output/images/sdcard.img
       - name: Store images
